Fix tooltip flicker if it gets under the pointer

--- a/css/style.css
+++ b/css/style.css
@@ -38,3 +38,6 @@ h3.tip-title {
 	padding-top: 0;
 	margin-bottom: 5px;
 }
+.qtip-defaults {
+	pointer-events: none; /*this prevents triggering mouseout if tip gets in way of cursor*/
+}
